--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "winston": "^3.19.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
