--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "@types/validator": "^13.15.10",
     "bcrypt-ts": "^8.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "validator": "^13.15.26",
     "winston": "^3.19.0",
     "zod": "^4.3.5"
   },
