--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
@@ -35,6 +36,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "jest": "^30.2.0",
+    "msw": "^2.12.7",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
