--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts",
+    "build": "tsc",
     "test": "cross-env --env-file=.env.test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "cross-env --env-file=.env.test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
@@ -21,6 +22,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "redis": "^5.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.26",
     "winston": "^3.19.0",
     "zod": "^4.3.5"
@@ -33,6 +37,8 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "jest": "^30.2.0",
