--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -8,7 +8,8 @@
       "@pages/*": ["./src/pages/*"],
       "@schemas/*": ["./src/schemas/*"],
       "@api/*": ["./src/api/*"],
-      "@utilities/*": ["./src/utilities/*"]
+      "@utilities/*": ["./src/utilities/*"],
+      "@stores/*": ["./src/stores/*"]
     },
 
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
