Add Unit and Integration test to Client

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -9,7 +9,8 @@
       "@schemas/*": ["./src/schemas/*"],
       "@api/*": ["./src/api/*"],
       "@utilities/*": ["./src/utilities/*"],
-      "@stores/*": ["./src/stores/*"]
+      "@stores/*": ["./src/stores/*"],
+      "@mock/*": ["./src/mock/*"]
     },
 
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
@@ -17,7 +18,7 @@
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["vite/client","vitest/globals","@testing-library/jest-dom"],
     "skipLibCheck": true,
 
     /* Bundler mode */
